--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ URL: https://github.com/2DegreesInvesting/adminApp
 BugReports: https://github.com/2DegreesInvesting/adminApp/issues
 Imports: 
     pkgload,
+    purrr,
     shiny
 Suggests: 
     covr
